# aep8

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  meson.build  pyproject.toml
.github/workflows/: build.yml  check.yml
docs/: conf.py  index.rst
src/aep8/: __init__.py  _compute_lbbo.f  _core.py  _irbem.c  _irbem.pyf  core.pyf  irbem.h  warnings.h
subprojects/: irbem.wrap
subprojects/packagefiles/irbem/: meson.build
test/: test_aep8.py  test_broadcasting.py  test_optimization.py  test_vectorized_energy.py
