[project]
name = "aep8"
description = "Python wrapper for IRBEM AE8/AP8 trapped particle flux model"
readme = "README.md"
authors = [ { name = "Leo Singer", email = "leo.p.singer@nasa.gov" } ]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.23",
]
requires-python = ">=3.10"
version = "0.0.1"

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
build-backend = 'mesonpy'
requires = [
    "meson>=0.63.0",
    "meson-python",
    "setuptools_scm>=6.2",
    "numpy>=2.0.0"
]

[tool.cibuildwheel]
skip = [
    # Skip these platforms because the configuration is failing with the error
    # `Need python for x86_64, but found x86`.
    # See https://github.com/nasa-gcn/hpx/pull/14
    "*win32",
    # Skip PyPy because it will be disabled by default in cibuildwheel 3.x.
    # FIXME: Remove when we update to cibuildwheel 3.x.
    "*pp*",
]
test-extras = ["test"]
test-command = "pytest {project}/test"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[[tool.cibuildwheel.overrides]]
# Use Homebrew-provided Fortran compiler in GitHub Actions runner
select = "*macos*"
inherit.environment = "append"
environment.FC = "gfortran-14"

[[tool.cibuildwheel.overrides]]
# macOS arm64 wheels are built on GitHub on macOS 13; set deployment target accordingly
select = "*macosx_x86_64"
inherit.environment = "append"
environment.MACOSX_DEPLOYMENT_TARGET = "13.0"

[[tool.cibuildwheel.overrides]]
# macOS arm64 wheels are built on GitHub on macOS 14; set deployment target accordingly
select = "*macosx_arm64"
inherit.environment = "append"
environment.MACOSX_DEPLOYMENT_TARGET = "14.0"

[tool.mypy]
ignore_missing_imports = true
