[project]
name = "aep8"
description = "Calculate the flux of electrons or protons trapped in the Earth's radiation belt using the NASA AE8/AP8 model from IRBEM"
readme = "README.md"
license = "BSD-3-Clause"
authors = [ { name = "Leo Singer", email = "leo.p.singer@nasa.gov" } ]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "astropy",
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "sphinx-astropy[confv2]",
    "sphinx-automodapi>=0.20.0",
]
test = [
    "hypothesis",
    "pytest",
    "pytest-mpl",
]

[project.urls]
GitHub = "https://github.com/m4opt/aep8"
Documentation = "https://aep8.readthedocs.io/"

[build-system]
build-backend = 'mesonpy'
requires = [
    "meson>=1.3.0",
    "meson-python",
    "setuptools_scm>=6.2",
    "numpy>=2.0.0"
]

[tool.cibuildwheel]
skip = [
    "*win32",
]
test-extras = ["test"]
test-command = "pytest --mpl {project}/test"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[[tool.cibuildwheel.overrides]]
# Use Homebrew-provided Fortran compiler in GitHub Actions runner
select = "*macos*"
inherit.environment = "append"
environment.FC = "gfortran-14"

[[tool.cibuildwheel.overrides]]
# macOS x86_64 wheels are built on GitHub on macOS 15; set deployment target accordingly
select = "*macosx_x86_64"
inherit.environment = "append"
environment.MACOSX_DEPLOYMENT_TARGET = "15.0"

[[tool.cibuildwheel.overrides]]
# macOS arm64 wheels are built on GitHub on macOS 14; set deployment target accordingly
select = "*macosx_arm64"
inherit.environment = "append"
environment.MACOSX_DEPLOYMENT_TARGET = "14.0"

[[tool.cibuildwheel.overrides]]
# meson-python: error: The package targets Python's Limited API, which is not
# supported by free-threaded CPython. The "python.allow_limited_api" Meson
# build option may be used to override the package default.
select = "cp???t-*"
inherit.config-settings = "append"
config-settings.setup-args = "-Dpython.allow_limited_api=false"

[tool.coverage.paths]
source = [
    "src/aep8",
    "**/site-packages/aep8",
]

[tool.meson-python]
limited-api = true

[tool.mypy]
exclude = ["^docs/"]
ignore_missing_imports = true
